recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:7: error: value !== is not a member of Int
	if ( steps !== 0){
                   ^Spiral:8: error: not found: value lenght
		return  spiral( steps-1, angle, lenght+increment, increment)
                                                ^Spiral:11: error: not found: value lenght
	return spiral ( 0, angle, lenght+increment, increment)
                                  ^